# chip8emu

./: Cargo.toml  README.md  keyboard-reference.txt
src/: chip.rs  keyboard.rs  main.rs  renderer.rs  speaker.rs  sprites.rs
