[package]
name = "chip8emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
phf = { version = "0.11.1", features = ["macros"] }
rodio = { version = "0.16.0", default-features = false }
